--- a/vanilla-piano/index.html
+++ b/vanilla-piano/index.html
@@ -165,6 +165,17 @@
 </body>
 
 <script>
+    window.addEventListener('keypress', function(keyPressEvent) {
+        const tone = document.querySelector(`audio[data-key="${keyPressEvent.keyCode}"]`);
+        if (!tone) return;
+        const pianoKey = document.querySelector(`.pianoKey[data-key="${keyPressEvent.keyCode}"]`);
+        tone.currentTime = 0;
+        pianoKey.classList.add('pressed');
+        tone.play();
+        setTimeOut(function() {
+            pianoKey.classList.removal('pressed');
+        }, 300);
+    });
 </script>
 
 </html>
