--- a/vanilla-typeahead/index.html
+++ b/vanilla-typeahead/index.html
@@ -84,6 +84,33 @@
 </body>
 
 <script>
+    const characters = []
+    const list = document.getElementById('list')
+    const search = document.querySelector('input')
+    
+    fetch('https://www.swapi.co/api/people')
+        .then(response => response.json())
+        .then(response => characters.push(...response.results))
+
+    function filterText() {
+        console.log(characters)
+        const filtered = characters
+            .filter(val => val.name.toLowerCase().includes(this.value.toLowerCase()))
+            .map(val => `<li>${val.name}</li>`)
+        console.log(filtered)
+        if (filtered.length) {
+            render(filtered)
+        }
+    }
+
+    function render(array) {
+        const html = array.join('')
+        list.innerHTML = html
+    }
+
+    search.addEventListener('keyup', filterText)
+    
+
 </script>
 
 </html>
